# perturb-tools

./: README.md  pyproject.toml  setup.py
.github/workflows/: pypi_release.yml
perturb_tools/: screen_demo.ipynb
perturb_tools/_arithmetic/_funcs/_LogFoldChange/: _calculate_log_fold_change.py
perturb_tools/_framework/: _ScreenModule.py  screen_demo.ipynb
perturb_tools/_framework/_supporting_functions/: _print_screen_object.py
perturb_tools/_normalization/_funcs/: _read_count_norm.py
perturb_tools/_plotting/: __init__.py
perturb_tools/_plotting/_funcs/: _plot_rep_consistency.py  _plot_stats.py  _set_matplotlib_rc_params.py
perturb_tools/_qc/: qc.py
perturb_tools/_readwrite/_funcs/: _read_screen_from_PoolQ.py  _read_screen_from_csvs.py  _write_screen_to_csv.py  _write_screen_to_excel.py
tests/: test_screen.py
