[project]
name = "perturb-tools"
version = "0.3.5"
authors = [
  { name="Michael Vinyard", email="mvinyard@broadinstitute.org" },{name="Jayoung Ryu", email="jayoung_ryu@g.harvard.edu"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pinellolab/perturb-tools"
Issues = "https://github.com/pinellolab/perturb-tools/issues"