[project]
name = "perturb-tools"
version = "0.3.5"
license = {file = "LICENSE"}
authors = [
  { name="Michael Vinyard", email="mvinyard@broadinstitute.org" },{name="Jayoung Ryu", email="jayoung_ryu@g.harvard.edu"},
]
description = "perturb-tools - Analysis Framework for Pooled CRISPR Genome Editing Screens."
readme = "README.md"
requires-python = ">3.7.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.4",
    "anndata>=0.7.1",
    "numpy>=1.19.2",
    "pandas>=1.1.2",
    "biopython>=1.79",
    "plotly",
    "regex",
    "xlsxwriter",
]

[project.urls]
Homepage = "https://github.com/pinellolab/perturb-tools"
Issues = "https://github.com/pinellolab/perturb-tools/issues"